# numcalc

./: .gitignore  README.md  pyproject.toml
include/: differential.h  functions.h  integral.h  maclaurin.h  numbers.h  types.h
pync/: __init__.py
src/: differential.c  functions.c  integral.c  maclaurin.c  numbers.c  types.c
